2004-04-10  Dominique Devriese  <devriese@kde.org>

	* Enable the DrGeo input filter.

2004-04-10  Pino Toscano <toscano.pino@tiscali.it>

	* Improved angle size editing, making possible choosing
	between degrees, radians and gradians.

	* More work in Dr. Geo filter.

	* Some improvements in Goniometry class

2004-04-08  Pino Toscano <toscano.pino@tiscali.it>

	* More work on types dialog: a new dialog will allow to edit
	types that now work in read-only mode.

	* Add a 'cross' style for points.

	* Some very minor work in Dr. Geo filter.

	* Add a new simple class to easily work with goniometric
	measures, and adapt Kig to use this class.

	* Some #include fixes

2004-04-05  Pino Toscano <toscano.pino@tiscali.it>

	* A new look for type list in the type dialog: a listview
	instead of a listbox that should make easier editing a type.

2004-04-04  Pino Toscano <toscano.pino@tiscali.it>

	* Now Kig can save icon information of every macro.

	* Some work on types dialog: icon of every type is now visible,
	and made a sort of skeleton to modify type's data.

	* Made buttons of some dialogs like other KDE dialogs ones
	  (with icons and correct alignment).

	* Kig now ask the user when exporting type(s) to an already
	existant file.

	* Some i18n fixes

2004-04-02  Dominique Devriese  <devriese@kde.org>

	* Implement the point-on-curve checking.  The code should work,
	but the objects using it cannot be built yet.

2004-03-28  Dominique Devriese  <devriese@kde.org>

	* Add some non-functional code for point-on-curve checking.

2004-03-28  Pino Toscano <toscano.pino@tiscali.it>

	* Add point styles

	* Some i18n fixes

	* More work on the DrGeo import filter

2004-03-27  Dominique Devriese  <devriese@kde.org>

	* Apply a patch by Albert Astals Cid <tsdgeos@terra.es> that gives
	focus to the text input on first opening the text dialog.
	Closes:78409.

	* Fix a translation issue with internal macro's.

	* Make a TextImp transformable by simply transforming its