@@ -79,7 +79,7 @@ KigGUIAction::KigGUIAction( GUIAction* act,
                             KigDocument& doc,
                             QObject* parent )
   : KAction( act->descriptiveName(),
-             KGlobal::instance()->iconLoader()->loadIcon(
+             doc.instance()->iconLoader()->loadIcon(
                act->iconFileName(), KIcon::User ),
              act->shortcut(),
              0, 0,              // no slot connection
